erDiagram
  USERS ||--o{ FRED_ARCHITECTURE_SNAPSHOTS : generates
  FRED_ARCHITECTURE_SNAPSHOTS ||--o{ FRED_ARCHITECTURE_ENTITIES : projects
  FRED_ARCHITECTURE_SNAPSHOTS ||--o{ FRED_ARCHITECTURE_RELATIONSHIPS : projects
  USERS ||--o{ FRED_ARCHITECTURE_OVERRIDES : records
  FRED_ARCHITECTURE_ENTITIES ||--o{ FRED_ARCHITECTURE_OVERRIDES : "matched by type and natural key"
  FRED_ARCHITECTURE_SNAPSHOTS ||--o{ FORMAL_EA_DOCUMENTS : "source baseline"
  FORMAL_EA_DOCUMENTS ||--o{ FORMAL_EA_DOCUMENTS : supersedes
  FORMAL_EA_DOCUMENTS ||--o{ FORMAL_EA_SECTIONS : contains
  FORMAL_EA_SECTIONS ||--o{ FORMAL_EA_FINDINGS : normalizes
  FORMAL_EA_SECTIONS ||--o{ FORMAL_EA_ENTITY_LINKS : references
  FRED_ARCHITECTURE_ENTITIES ||--o{ FORMAL_EA_ENTITY_LINKS : "matched by snapshot and natural key"

  FRED_ARCHITECTURE_SNAPSHOTS {
    bigint id PK
    int generated_by FK
    timestamptz generated_at
    jsonb evidence "immutable complete export"
    jsonb summary
    text report
    text verification
    jsonb models
  }
  FRED_ARCHITECTURE_ENTITIES {
    bigint id PK
    bigint snapshot_id FK
    varchar entity_type
    varchar natural_key
    varchar name
    varchar building
    jsonb attributes
    varchar evidence_status
    varchar source
    timestamptz source_timestamp
  }
  FRED_ARCHITECTURE_RELATIONSHIPS {
    bigint id PK
    bigint snapshot_id FK
    varchar relationship_type
    varchar from_type
    varchar from_key
    varchar to_type
    varchar to_key
    jsonb attributes
    varchar evidence_status
    varchar source
  }
  FRED_ARCHITECTURE_OVERRIDES {
    bigint id PK
    varchar entity_type
    varchar natural_key
    varchar operation
    jsonb patch
    text reason
    int created_by FK
    varchar created_by_name
    timestamptz created_at
    timestamptz superseded_at
  }
  FORMAL_EA_DOCUMENTS {
    bigint id PK
    bigint source_snapshot_id FK
    bigint supersedes_document_id FK
    date architecture_state_date
    timestamptz effective_at
    varchar approval_status
    varchar content_sha256 UK
    varchar word_sha256
  }
  FORMAL_EA_SECTIONS {
    bigint id PK
    bigint document_id FK
    int ordinal
    int level
    varchar section_number
    varchar heading
    jsonb heading_path
    text content
    varchar content_sha256
  }
  FORMAL_EA_FINDINGS {
    bigint id PK
    bigint document_id FK
    bigint section_id FK
    varchar finding_type
    varchar confidence
    varchar priority
    text content
  }
  FORMAL_EA_ENTITY_LINKS {
    bigint id PK
    bigint document_id FK
    bigint section_id FK
    bigint snapshot_id FK
    varchar entity_type
    varchar natural_key
    varchar link_type
  }
